--- a/09_SpringWebSecurity/09_SpringWebSecurity/src/main/webapp/WEB-INF/views/home.html
+++ b/09_SpringWebSecurity/09_SpringWebSecurity/src/main/webapp/WEB-INF/views/home.html
@@ -7,8 +7,12 @@
               th:href="@{/resources/style.css}"></link>
     </head>
     <body>
+        <div id="header" th:include="page :: header"></div>
+
         <h1>Welcome to Spittr</h1>
         <a th:href="@{/spittles}">Spittles</a> |
         <a th:href="@{/spitter/register}">Register</a>
+
+        <div id="footer" th:include="page :: copy"></div>
     </body>
 </html>
