--- a/09_SpringWebSecurity/09_SpringWebSecurity/src/main/webapp/WEB-INF/views/login.html
+++ b/09_SpringWebSecurity/09_SpringWebSecurity/src/main/webapp/WEB-INF/views/login.html
@@ -8,16 +8,17 @@
 </head>
 <body onload='document.f.username.focus();'>
     <div id="header" th:include="page :: header"></div>
-    PROVA
     <div id="content">
         <form name='f' th:action='@{/login}' method='POST'>
             <table>
-                <tr><td>User:</td><td>
-                    <input type='text' name='username' value='' /></td></tr>
-                <tr><td>Password:</td>
-                    <td><input type='password' name='password'/></td></tr>
-                <tr><td colspan='2'>
-                    <input name="submit" type="submit" value="Login"/></td></tr>
+                <tr><td>User:</td><td><input type='text' name='username' value='' /></td></tr>
+
+                <tr><td>Password:</td><td><input type='password' name='password'/></td></tr>
+
+                <tr><td colspan='2'><input id="remember_me" name="remember-me" type="checkbox"/>
+                    <label for="remember_me" class="inline">Remember me</label></td></tr>
+
+                <tr><td colspan='2'><input name="submit" type="submit" value="Login"/></td></tr>
             </table>
         </form>
     </div>
