--- a/09_SpringWebSecurity/09_SpringWebSecurity/src/main/webapp/WEB-INF/views/profile.html
+++ b/09_SpringWebSecurity/09_SpringWebSecurity/src/main/webapp/WEB-INF/views/profile.html
@@ -7,10 +7,14 @@
           th:href="@{/resources/style.css}"></link>
 </head>
 <body>
+    <div id="header" th:include="page :: header"></div>
+
     <h1>Your Profile</h1>
     <p th:text="${spitter.username}" />
     <p th:text="${spitter.firstName}" />
     <p th:text="${spitter.lastName}" />
     <p th:text="${spitter.email}" />
+
+    <div id="footer" th:include="page :: copy"></div>
 </body>
 </html>
