--- a/09_SpringWebSecurity/09_SpringWebSecurity/src/main/webapp/WEB-INF/views/registerForm.html
+++ b/09_SpringWebSecurity/09_SpringWebSecurity/src/main/webapp/WEB-INF/views/registerForm.html
@@ -7,6 +7,8 @@
               th:href="@{/resources/style.css}"></link>
     </head>
     <body>
+        <div id="header" th:include="page :: header"></div>
+
         <h1>Register</h1>
         <form method="POST" th:object="${spitter}" th:action="@{/spitter/register}" enctype="multipart/form-data">
             <div class="errors" th:if="${#fields.hasErrors('*')}">
@@ -23,5 +25,7 @@
             <label>Profile Picture</label>:<input type="file" name="profilePicture" accept="image/jpeg,image/png,image/gif" /><br/>
             <input type="submit" value="Register" />
         </form>
+
+        <div id="footer" th:include="page :: copy"></div>
     </body>
 </html>
